[add]html htmlの追加

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>完了したTODO</p>
       <ul>
         <li>
-          <p>ごはん</p>
+          <p>TODOでした</p>
           <button>戻す</button>
         </li>
       </ul>
