--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="complete-area">
       <p class="title">完了したTODO</p>
       <ul id="complete-list">
-        <li class="list">
+        <li id="list">
           <div class="list-row">
             <p>TODOでした</p>
             <button>戻す</button>
